Version 0.50.0 (In progress)
  * updated .gitignore
  * bug fix to --enable-fortran-interfaces Makefile.AM including .mod files

Version 0.44.0 (19 June, 2015)

  * Added '--enable-fortran-interfaces' configuration option (Issue #24)
  * Adding fortran interface for 4d cns
  * fixed a bug in the 2d temporal interfaces (Issue #20)
  * two workarounds prevent segfaults at program exit (fixes Intel 12.1)
  * added an example for calling the python interfaces
  * added 4d interfaces for cmasa and pymasa 
  * fix for parallel builds when python is enabled (Issue #11)
  * python configuration included in masa_version binary (Issue #12)

Version 0.43.1 (12 November 2013)
  * Transitioned to git source control checks
  * Fixed bug in python interfaces from release tarball

Version 0.43.0 (10 November 2013)

  * Moved MASA from PECOS Private SVN to Github
  * Replacing MMS for 3D Navier-Stokes with Sutherland viscosity
  * Fixing Make-dist

Version 0.42.0 (16 July 2013)

  * Added optional python interface support with SWIG
  * Added example for isotropic, homogeneous Navier Stokes AD MS
  * Bug fix in isotropic, homogeneous Navier Stokes AD MS
  * Bug fix in channel Navier Stokes AD MS
  * Included two missing cmasa interfaces: masa_get_name and masa_get_dimension

Version 0.41.1 (22 May 2013)

  * Added incompressible Channel flow Navier Stokes Automatic Differentiation MS
  * Added incompressible isotropic, homogeneous Navier Stokes Automatic Differentiation MS
  * Fixed a bug related to intel 11.1 not passing make-check on lonestar

Version 0.41.0 (28 April 2013)

  * Added convection diffusion manufactured solution
  * Added burgers_example.cpp, an example of the burgers API
  * Added model documentation for Burgers' Equation
  * Removed natbib style references from MASA
  * adding AM_FCFLAGS to build fmasa properly
  * added C++ interfaces
  * added hook to strongly suggest user utilize "make check"
  * added an AD Navier-Stokes solution with non-trivial cross terms